--- a/capitulos_1_a_5.html
+++ b/capitulos_1_a_5.html
@@ -34,10 +34,9 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>Gretel e seu irmão, no começo, não se davam muito bem. Depois da mudança de Berlim para Haja-Vista, a relação entre eles piorou, pois cada um tinha visões diferentes, tanto ao lugar quanto ao Nazismo.
-                </p>
+                <p>Gretel e seu irmão, no começo, não se davam muito bem. Depois da mudança de Berlim para Haja-Vista, a relação entre eles piorou, pois cada um tinha visões diferentes, tanto ao lugar quanto ao Nazismo.</p>
 
-                <p>Gretel aceita totalmente o Nazismo e acredita que "depois que dermos um jeito na casa, provavelmente não será mais tão ruim", enquanto Bruno, que ainda é uma criança de grande imaginação, inocência e bondade não entende o que está acontecendo e apenas deseja voltar para sua casa em Berlim.</p>
+                <p>Gretel aceita totalmente o Nazismo e acredita que "depois que dermos um jeito na casa, provavelmente não será mais tão ruim", enquanto Bruno, que ainda é uma criança cheia de imaginação, inocência e bondade não entende o que está acontecendo e apenas deseja voltar para sua casa em Berlim.</p>
 
                 <div class="content-quote">Aqui não é minha casa e nunca vai ser.<div class="content-quote-author">- Bruno</div></div>
             </div>
