--- a/capitulos_6_a_10.html
+++ b/capitulos_6_a_10.html
@@ -34,7 +34,7 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>Enquanto se adaptavam as suas novas vidas, os pais de Bruno e Gretel contratam um professor que explica sobre os nazistas e os ensinava que os judeus eram uma raça inferior. O Bruno não prestava muita atenção nas aulas, mas Gretel presta, idolatrando o Hitler, líder do Estado alemão que comandavam os nazistas a atacarem os judeus e explandirem o território.</p>
+                <p>Enquanto se adaptavam as suas novas vidas, os pais de Bruno e Gretel contratam um professor que explica sobre os nazistas e os ensinava que os judeus eram uma raça inferior. O Bruno não prestava muita atenção nas aulas, mas Gretel presta, idolatrando o Hitler, líder do Estado alemão que comandavam os nazistas a atacarem os judeus e expandirem o território.</p>
 
                 <p>Gretel e Bruno rapidamente ficam entendiados, com Bruno começando a explorar a área onde moram. Bruno encontra um campo de concentração e, aproximando-se do campo, ele se encontra com um menino que estava preso no campo de concentração.</p>
                     
