--- a/comparacao.html
+++ b/comparacao.html
@@ -41,24 +41,15 @@
     <section id="content">
         <div class="content-wrapper">
             <div class="content-text">
-                <p>O livro <i>Os meninos que enganavam nazistas</i> escrito por Joseph Joffo conta a história de dois
-                    irmãos judeus, Joseph e Maurice, de 10 e 12 anos respectivamente, que escaparam do regime nazista.
-                </p>
+                <p>O livro <i>Os meninos que enganavam nazistas</i> escrito por Joseph Joffo conta a história de dois irmãos judeus, Joseph e Maurice, de 10 e 12 anos respectivamente, que escaparam do regime nazista.</p>
 
-                <p>O livro <i>O menino do pijama listrado</i> escrito por John Boyne conta sobre um menino chamado Bruno
-                    filho de uma família alemã cujo pai é um general nazista.</p>
+                <p>O livro <i>O menino do pijama listrado</i> escrito por John Boyne conta sobre um menino chamado Bruno filho de uma família alemã cujo pai é um general nazista.</p>
 
-                <p>Somos expostos a dois pontos de vista de um mesmo momento histórico; de um lado, vemos dois irmãos
-                    judeus expostos ao Holocausto, tendo que se mudar de lugar para lugar para não serem pegos, e por
-                    outro, dois filhos de um general alemão que comanda sob um campo de concentração, vivendo uma vida
-                    confortável, mesmo que sem graça.</p>
+                <p>Somos expostos a dois pontos de vista de um mesmo momento histórico; de um lado, vemos dois irmãos judeus expostos ao Holocausto, tendo que se mudar de lugar para lugar para não serem pegos, e por outro, dois filhos de um general alemão que comanda sob um campo de concentração, vivendo uma vida confortável, mesmo que sem graça.</p>
 
-                <p>Também temos uma diferença nos nossos protagonistas: em um livro, temos irmãos unidos, que se
-                    ajudaram para escapar do nazismo, e no outro, temos dois irmãos completamente diferentes - uma que é
-                    a favor do nazismo, e outro que se encontra alienado da realidade, não entendendo direito o que está
-                    acontecendo em sua volta.</p>
+                <p>Também temos uma diferença nos nossos protagonistas: em um livro, temos irmãos unidos, que se ajudaram para escapar do nazismo, e no outro, temos dois irmãos completamente diferentes - uma que é a favor do nazismo, e outro que se encontra alienado da realidade, não entendendo direito o que está acontecendo em sua volta.</p>
 
-                <p>Contudo, há uma semelhança crucial entre os dois: ambos mostram o Holocausto como a catástrofe que foi. No primeiro livro, há o medo constante da perseguição alemã chegar até eles, que mostra como o regime foi uma experiência traumática para todos que tiveram de escapar dele. No momento que o autor teve de sair de casa, conta:</p>
+                <p>Contudo, há uma semelhança crucial entre os dois: ambos mostram o Holocausto como a catástrofe que foi. No primeiro livro, há o medo constante dos alemães chegarem até eles, que mostra como o regime foi uma experiência traumática para todos que tiveram de escapar dele. No momento que o autor teve de sair de casa pela primeira vez aos 10, conta:</p>
 
                 <div class="content-quote">Nossa infância tinha terminado.<div class="content-quote-author">- Joseph Joffo</div></div>
 
