--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="chapter-description">O holocausto foi uma das maiores tragédias que ocorreram na idade
                     contemporânea. Os horrores praticados contra a população judia são um exemplo do que nunca repetir,
                     e pela literatura imortalizamos as histórias e memórias daqueles que sobreviveram. Os dois livros
-                    abordam o assunto de maneiras diferentes, mas transmitem uma mesma mensagem.</div>
+                    abordam o assunto de maneiras diferentes, mas transmitem a mesma mensagem.</div>
                 <div class="chapter-avatar">
                     <div class="author-img"><img src="/static/Perfil da Perazo.webp" alt="Perfil da Perazo"></div>
                     <div class="author-img"><img src="/static/Perfil do Daniel.webp" alt="Perfil do Daniel"></div>
