--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="chapter-wrapper">
                     <h2 class="chapter-title">Capítulos 16 a 20</h2>
                     <div class="chapter-description">Bruno olha como realmente é o trabalho sujo de seu pai,
-                        confrontando também a morte de sua avó e como é o o campo de concentração.
+                        confrontando também a morte de sua avó e como é o campo de concentração.
                     </div>
                     <div class="chapter-avatar">
                         <div class="author-img"><img src="/static/Perfil do Estevão.webp" alt="Perfil do Estevão"></div>
