--- a/capitulos_16_a_20.html
+++ b/capitulos_16_a_20.html
@@ -38,7 +38,7 @@
                     
                 <p>Bruno teve de retornar para sua casa em Berlim para o funeral de sua avó, mas percebeu na volta que não achava mais sua casa nova tão ruim. Já estava acostumado com ela graças a companhia de Shmuel. Mas do mesmo jeito, Bruno estava preocupado com a sua mãe, que estava dando vários cochilos e parecia bem depressiva, e também um pouco entediado pela cerca.</p>
                 
-                <p>E por isso, quando Bruno recebeu as notícias de que terá de voltar para sua casa em Berlim, ele concorda em se juntar a Schmuel em seu lado da cerca tanto para ajudar seu amigo a procurar seu pai perdido quanto para satisfazer a sua própria curiosidade.</p>
+                <p>E por isso, quando Bruno recebeu as notícias de que terá de voltar para sua casa em Berlim, ele concorda em se juntar a Shmuel em seu lado da cerca tanto para ajudar seu amigo a procurar seu pai perdido quanto para satisfazer a sua própria curiosidade.</p>
 
                 <div class="content-quote">Queria que a gente pudesse brincar juntos. Só uma vez. Só para ter a lembrança.<div class="content-quote-author">- Bruno</div></div>
             </div>
